cluster/apps/networking/external-services/pve1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pve1
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: pve1.${SECRET_DOMAIN}.
  ports:
    - name: http
      port: &port 8006
      protocol: TCP
      targetPort: *port
